# lightplayer

./: .cursorrules  .dockerignore  .gitignore  1∫  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.ci  Dockerfile.rv32-jit  README.md  agent-context.toml  before-fixes.txt  builtins.wasm  dockerignore-ci  index.html  justfile  notes.md  rainbow-default.glsl  run-tests.sh  run_test.sh  rust-toolchain.toml  test_round
lp-app/lp-studio-runtime/: Cargo.toml  README.md
lp-app/lp-studio-runtime/src/: browser_esp32_flash.rs  browser_protocol_client.rs  browser_serial_protocol_client.rs  browser_serial_runtime.rs  browser_serial_shim.rs  browser_worker_runtime.rs  client_session_runtime.rs  demo_project.rs  effect_executor.rs  harness.rs  host_process_runtime.rs  lib.rs  project_session_runtime.rs  protocol_event.rs  worker_envelope.rs
lp-app/lp-studio-web/: Cargo.toml  Dioxus.toml  README.md
lp-app/lp-studio-web/public/: browser-esp32-flash.js  browser-serial.js  index.html
lp-app/lp-studio-web/scripts/: studio-firmware-manifest.mjs  studio-story-pngs.mjs
lp-app/lp-studio-web/src/: app.rs  main.rs  style.css  web_provisioning_controller.rs
lp-app/lpa-client/: Cargo.toml  README.md
lp-app/lpa-client/src/: client.rs  client_error.rs  client_event.rs  client_io.rs  file_sync_ops.rs  lib.rs  local.rs  project_deploy.rs  project_read_stream.rs  protocol_session.rs  pull_loop.rs  specifier.rs  tokio_client.rs  transport.rs  transport_emu_serial.rs  transport_ws.rs
lp-app/lpa-client/tests/: scene_render_emu_async.rs
lp-app/lpa-fs-opfs/: Cargo.toml  README.md
lp-app/lpa-fs-opfs/src/: flusher.rs  lib.rs  library_layout.rs  library_locks.rs  lp_fs_opfs.rs  opfs_error.rs  opfs_read.rs  opfs_root.rs  opfs_write.rs  store_lock.rs
lp-app/lpa-fs-opfs/tests/: library_locks.rs  opfs_ops.rs  store_lock.rs  store_round_trip.rs
lp-app/lpa-link/: Cargo.toml  README.md
lp-app/lpa-link/examples/: manage_smoke.rs
lp-app/lpa-link/src/: lib.rs  link_connection.rs  link_diagnostic.rs  link_endpoint.rs  link_endpoint_id.rs  link_endpoint_status.rs  link_error.rs  link_log_entry.rs  link_management.rs  link_provider.rs  link_provider_id.rs  link_session.rs  link_session_id.rs
lp-app/lpa-server/: Cargo.toml  README.md
lp-app/lpa-server/src/: device_identity.rs  error.rs  file_sync.rs  handlers.rs  lib.rs  project.rs  project_manager.rs  project_read_source.rs  recovery_report.rs  server.rs  template.rs
lp-app/lpa-server/tests/: binding_apply_live.rs  file_sync_contract.rs  fs_version_tracking.rs  hello.rs  overlay_revision.rs  project_fs_refresh.rs  request_error_response.rs  server_tick.rs  set_log_level.rs  stop_all_projects.rs
lp-app/lpa-studio-core/: Cargo.toml  README.md
lp-app/lpa-studio-core/src/: connection_session.rs  in_flight_action.rs  lib.rs  studio_action.rs  studio_app.rs  studio_effect.rs  studio_event.rs  studio_state.rs
lp-app/lpa-studio-ux/: Cargo.toml  README.md
lp-app/lpa-studio-ux/src/: lib.rs
lp-app/lpa-studio-web/: Cargo.toml  Dioxus.toml  README.md  build.rs  index.html  tailwind.css
lp-app/lpa-studio-web-story-macros/: Cargo.toml
lp-app/lpa-studio-web-story-macros/src/: lib.rs
lp-app/lpa-studio-web/assets/: tailwind.css
lp-app/lpa-studio-web/public/: browser-serial.js  index.html  serial-debug.html
lp-app/lpa-studio-web/scripts/: preview-lab-sweep.mjs  studio-firmware-manifest.mjs  studio-story-pngs.mjs
lp-app/lpa-studio-web/src/: README.md  app.rs  library_host_opfs.rs  local_store.rs  main.rs  router.rs  studio_url.rs  style.css  web_app.rs  web_provisioning_controller.rs
lp-app/web-demo/: .gitignore  Cargo.toml  README.md
lp-app/web-demo/src/: lib.rs
lp-app/web-demo/www/: index.html  rainbow-default.glsl
lp-base/lp-collection/: Cargo.toml
lp-base/lp-collection/src/: chunked_vec.rs  entry.rs  lib.rs  map.rs  set.rs
lp-base/lp-perf/: Cargo.toml
lp-base/lp-perf/src/: lib.rs
lp-base/lp-perf/tests/: macros.rs
lp-base/lp-recovery/: Cargo.toml  README.md
lp-base/lp-recovery/src/: backend.rs  crash_record.rs  frame_guard.rs  frame_kind.rs  frame_path.rs  frame_record.rs  in_memory_backend.rs  ledger.rs  lib.rs  path_entry.rs  recovery.rs  recovery_level.rs  recovery_region.rs  recovery_stack.rs  reset_cause.rs  snapshot.rs  tuning.rs
lp-base/lpfs/: Cargo.toml
lp-base/lpfs/src/: error.rs  fs_event.rs  lib.rs  lp_fs.rs  lp_fs_mem.rs  lp_fs_std.rs  lp_fs_view.rs  lp_path.rs  lpc_model_artifact.rs  lpc_source_legacy.rs
lp-cli/: Cargo.toml
lp-cli/src/: main.rs
lp-cli/src/client/: cli_connect.rs  client_connect.rs  host_process.rs  host_serial_esp32.rs  local.rs  local_host.rs  local_server.rs  mod.rs  serial_port.rs  transport.rs
lp-cli/src/commands/: mod.rs
lp-cli/src/config/: mod.rs
lp-cli/src/debug_ui/: format.rs  inspector.rs  mod.rs  node_cards.rs  panels.rs  resource_preview.rs  slot_edit.rs  slot_render.rs  ui.rs
lp-cli/src/server/: create_server.rs  run_server_loop_async.rs  transport_ws.rs
lp-cli/tests/: dev_command.rs  examples_valid.rs  file_watch_sync.rs  integration.rs  profile_alloc_smoke.rs  profile_cpu_smoke.rs  profile_events_steady_render_smoke.rs  schema_conformance.rs
lp-core/lp-client/: Cargo.toml
lp-core/lp-client/src/: client.rs  lib.rs  local.rs  specifier.rs  transport.rs  transport_emu_serial.rs  transport_ws.rs
lp-core/lp-client/tests/: scene_render_emu_async.rs
lp-core/lp-engine/: Cargo.toml
lp-core/lp-engine-client/: Cargo.toml  README.md
lp-core/lp-engine-client/src/: lib.rs  test_util.rs
lp-core/lp-engine-client/tests/: client_view.rs
lp-core/lp-engine/src/: error.rs  lib.rs
lp-core/lp-engine/tests/: partial_state_updates.rs  (+2 more)
lp-core/lp-model/: Cargo.toml
lp-core/lp-server/: Cargo.toml
lp-core/lp-shared/: Cargo.toml  README.md
lp-core/lpc-engine/: Cargo.toml  README.md
lp-core/lpc-hardware/: Cargo.toml  README.md
lp-core/lpc-history/: Cargo.toml  README.md
lp-core/lpc-model/: Cargo.toml  README.md  build.rs
lp-core/lpc-node-registry/: Cargo.toml
lp-core/lpc-registry/: Cargo.toml  README.md
lp-core/lpc-shared/: Cargo.toml  README.md
(+11555 files in other folders)
