[workspace]
members = [
    # lp-base workspace members
    "lp-base/lp-perf",
    "lp-base/lpfs",
    # lp-app workspace members
    "lp-core/lpc-engine",
    "lp-core/lpc-view",
    "lp-core/lpc-shared",
    "lp-app/lpa-server",
    "lp-app/lpa-client",
    "lp-fw/fw-core",
    "lp-fw/fw-checks",
    "lp-cli",
    "lp-fw/fw-esp32",
    "lp-fw/fw-emu",
    "lp-fw/fw-tests",
    "lp-core/lpc-model",
    "lp-core/lpc-slot-codegen",
    "lp-core/lpc-slot-macros",
    "lp-core/lpc-slot-mockup",
    "lp-core/lpc-wire",
    # lps workspace members
    "lp-shader/lps-builtin-ids",
    "lp-shader/lps-builtins",
    "lp-shader/lpfn-impl-macro",
    "lp-shader/lps-filetests-gen-app",
    "lp-shader/lps-shared",
    "lp-shader/lp-shader",
    "lp-shader/lps-diagnostics",
    "lp-shader/lpvm",
    "lp-shader/lpvm-wasm",
    "lp-shader/lps-frontend",
    "lp-shader/lps-glsl",
    "lp-shader/lpvm-cranelift",
    "lp-shader/lpvm-native",
    "lp-shader/lpvm-emu",
    "lp-shader/lpir",
    "lp-shader/lps-filetests",
    "lp-riscv/lp-riscv-emu-shared",
    "lp-riscv/lp-riscv-inst",
    "lp-riscv/lp-riscv-emu",
    "lp-riscv/lp-riscv-elf",
    "lp-riscv/lp-riscv-emu-guest",
    "lp-riscv/lp-riscv-emu-guest-test-app",
    "lp-shader/lps-builtins-gen-app",
    "lp-shader/lps-builtins-emu-app",
    "lp-shader/lps-filetests-app",
    "lp-app/web-demo",
    "spikes/naga-wasm-poc", "lp-shader/lps-q32",
    "lpfx/lpfx",
    "lpfx/lpfx-cpu",
]
resolver = "2"

# Exclude lps-builtins-emu-app, lps-builtins-wasm, and fw-esp32 from default workspace builds (cross-target only)
# They're still in workspace members so they can use workspace dependencies
# Build them explicitly with: just build-builtins, just build-rv32, or just build-fw-esp32
default-members = [
    # lp-base workspace members
    "lp-base/lpfs",
    # lp-app workspace members
    "lp-core/lpc-engine",
    "lp-core/lpc-view",
    "lp-core/lpc-shared",
    "lp-app/lpa-server",
    "lp-app/lpa-client",
    "lp-fw/fw-core",
    "lp-fw/fw-checks",
    "lp-fw/fw-tests",
    "lp-cli",
    "lp-core/lpc-model",
    "lp-core/lpc-wire",
    # lps workspace members (excluding lps-builtins-emu-app)
    "lp-shader/lps-builtin-ids",
    "lp-shader/lps-builtins",
    "lp-shader/lps-filetests-gen-app",
    "lp-shader/lps-shared",
    "lp-shader/lp-shader",
    "lp-shader/lps-diagnostics",
    "lp-shader/lpvm",
    "lp-shader/lpvm-wasm",
    "lp-shader/lps-frontend",
    "lp-shader/lps-glsl",
    "lp-shader/lpir",
    "lp-shader/lps-filetests",
    "lp-riscv/lp-riscv-emu-shared",
    "lp-riscv/lp-riscv-inst",
    "lp-riscv/lp-riscv-emu",
    "lp-riscv/lp-riscv-elf",
    "lp-shader/lps-builtins-gen-app",
    "lp-shader/lps-filetests-app",
    "lpfx/lpfx",
    "lpfx/lpfx-cpu",
]
[workspace.package]
version = "40.0.0"
authors = ["The Wasmtime Project Developers"]
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.90.0"

[workspace.lints.rust]
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unused-macro-rules = 'warn'

[workspace.lints.clippy]
all = { level = 'allow', priority = -1 }
clone_on_copy = 'warn'
map_clone = 'warn'
uninlined_format_args = 'warn'
unnecessary_to_owned = 'warn'
manual_strip = 'warn'
useless_conversion = 'warn'
unnecessary_mut_passed = 'warn'
unnecessary_fallible_conversions = 'warn'
unnecessary_cast = 'warn'
allow_attributes_without_reason = 'warn'
from_over_into = 'warn'
redundant_field_names = 'warn'
multiple_bound_locations = 'warn'
extra_unused_type_parameters = 'warn'

[workspace.dependencies]
# Logging dependencies
test-log = "0.2"
env_logger = "0.11"

# Cranelift crates - git main (TestCase fix); uncomment [patch] for local path
cranelift-codegen = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0", default-features = false }
cranelift-frontend = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0", default-features = false }
cranelift-module = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0", default-features = false }
cranelift-jit = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0", default-features = false }
cranelift-native = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0" }
cranelift-object = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0" }
cranelift-reader = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0" }
cranelift-control = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0", default-features = false }
cranelift-interpreter = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0" }

# regalloc2 - fork (ChunkedVec for OOM mitigation, feature-gating ION allocator)
regalloc2 = { git = "https://github.com/light-player/lp-regalloc2", branch = "lightplayer", default-features = false, features = ["std"] }

# Common dependencies

# Common dependencies
target-lexicon = "0.13.0"
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
anyhow = { version = "1.0.100", default-features = false }
log = { version = "0.4", default-features = false }
regex = "1.9.1"
glob = "0.3.3"
object = { version = "0.37.3", default-features = false, features = ['read_core', 'elf'] }
critical-section = { version = "1.2.0", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc"] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde", "preserve_order"] }
schemars = { version = "1.2.1", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.80", default-features = false, features = ["alloc", "raw_value"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[profile.release]
# Link-time optimization for all release builds - saves ~100-300 KB
lto = true
opt-level = "z"
codegen-units = 1
panic = "unwind"

# fw-emu: keep debug info for backtrace symbolication
[profile.release.package.fw-emu]
debug = 1

# ESP32: panic=unwind for OOM recovery via unwinding crate
[profile.release-esp32]
inherits = "release"
panic = "unwind"

[profile.release-esp32.package.fw-esp32]
debug = 1
strip = "none"

[profile.release-esp32.package.esp-radio]
opt-level = 3

# Profile for fw-emu: opt-level=3 avoids Cranelift codegen bugs in emulator (InvalidMemoryAccess).
# Used by test_scene_render_fw_emu via ensure_binary_built(..with_profile("release-emu")).
[profile.release-emu]
inherits = "release"
opt-level = 3
codegen-units = 4
# panic = "unwind" inherited from release

[profile.release-emu.package.fw-emu]
debug = 1

# Hot-path crates: optimize for speed instead of size
# These crates are in the critical rendering path and benefit from speed optimizations
[profile.release.package.lpc-engine]
# Optimize for speed (hot path in rendering loop)
opt-level = 3
# Keep multiple codegen units for faster compilation and better parallelization
codegen-units = 4
# Note: lto is inherited from workspace [profile.release]

[profile.release.package.lps-builtins]
# Optimize for speed (hot path in shader execution)
opt-level = 3
# Keep multiple codegen units for faster compilation and better parallelization
codegen-units = 4
# Note: lto is inherited from workspace [profile.release]

# Patch the ESP stack to the local esp-hal checkout.
[patch.crates-io]
esp-println = { path = "../oss/esp-hal/esp-println" }
esp-alloc = { path = "../oss/esp-hal/esp-alloc" }
esp-backtrace = { path = "../oss/esp-hal/esp-backtrace" }
esp-bootloader-esp-idf = { path = "../oss/esp-hal/esp-bootloader-esp-idf" }
esp-config = { path = "../oss/esp-hal/esp-config" }
esp-hal = { path = "../oss/esp-hal/esp-hal" }
esp-hal-procmacros = { path = "../oss/esp-hal/esp-hal-procmacros" }
esp-metadata-generated = { path = "../oss/esp-hal/esp-metadata-generated" }
esp-phy = { path = "../oss/esp-hal/esp-phy" }
esp-radio = { path = "../oss/esp-hal/esp-radio" }
esp-radio-rtos-driver = { path = "../oss/esp-hal/esp-radio-rtos-driver" }
esp-riscv-rt = { path = "../oss/esp-hal/esp-riscv-rt" }
esp-rom-sys = { path = "../oss/esp-hal/esp-rom-sys" }
esp-rtos = { path = "../oss/esp-hal/esp-rtos" }
esp-storage = { path = "../oss/esp-hal/esp-storage" }
esp-sync = { path = "../oss/esp-hal/esp-sync" }
# no_std pp-rs fork for naga `glsl-in` on bare-metal (https://github.com/light-player/pp-rs)
pp-rs = { path = "third_party/pp-rs" }

#####################################
# Local dev patches

# pp-rs local clone (sibling of lp2025): git clone https://github.com/light-player/pp-rs ../pp-rs
#[patch.crates-io]
#pp-rs = { path = "../pp-rs" }

#[patch."https://github.com/light-player/lp-regalloc2"]
#regalloc2 = { path = "../lp-regalloc2" }
#
#[patch."https://github.com/light-player/lp-cranelift"]
#cranelift-codegen = { path = "../lp-cranelift/cranelift/codegen" }
#cranelift-frontend = { path = "../lp-cranelift/cranelift/frontend" }
#cranelift-module = { path = "../lp-cranelift/cranelift/module" }
#cranelift-jit = { path = "../lp-cranelift/cranelift/jit" }
#cranelift-native = { path = "../lp-cranelift/cranelift/native" }
#cranelift-object = { path = "../lp-cranelift/cranelift/object" }
#cranelift-reader = { path = "../lp-cranelift/cranelift/reader" }
#cranelift-control = { path = "../lp-cranelift/cranelift/control" }
#cranelift-interpreter = { path = "../lp-cranelift/cranelift/interpreter" }
#
#[patch."https://github.com/light-player/lp-common"]
#lp-collection = { path = "../lp-common/lp-collection" }
#
#[patch.crates-io]
#littlefs-rust = { path = "../littlefs-rust/littlefs-rust" }
