[workspace]
members = [
    # lp-base workspace members
    "lp-base/lp-perf",
    "lp-base/lp-collection",
    "lp-base/lp-recovery",
    "lp-base/lpfs",
    # lp-app workspace members
    "lp-core/lpc-engine",
    "lp-core/lpc-view",
    "lp-core/lpc-hardware",
    "lp-core/lpc-shared",
    "lp-app/lpa-server",
    "lp-app/lpa-client",
    "lp-app/lpa-link",
    "lp-app/lpa-studio-core",
    "lp-app/lpa-studio-web",
    "lp-app/lpa-studio-web-story-macros",
    "lp-fw/fw-browser",
    "lp-fw/fw-core",
    "lp-fw/fw-host",
    "lp-fw/fw-checks",
    "lp-cli",
    "lp-fw/fw-esp32",
    "lp-fw/fw-emu",
    "lp-fw/fw-tests",
    "lp-core/lpc-model",
    "lp-core/lpc-slot-codegen",
    "lp-core/lpc-slot-macros",
    "lp-core/lpc-registry",
    "lp-core/lpc-wire",
    # lps workspace members
    "lp-shader/lps-builtin-ids",
    "lp-shader/lps-builtins",
    "lp-shader/lpfn-impl-macro",
    "lp-shader/lps-filetests-gen-app",
    "lp-shader/lps-shared",
    "lp-shader/lp-shader",
    "lp-shader/lps-diagnostics",
    "lp-shader/lpvm",
    "lp-shader/lpvm-wasm",
    "lp-shader/lps-frontend",
    "lp-shader/lps-glsl",
    "lp-shader/lpvm-cranelift",
    "lp-shader/lpvm-native",
    "lp-shader/lpvm-emu",
    "lp-shader/lpir",
    "lp-shader/lps-filetests",
    "lp-riscv/lp-riscv-emu-shared",
    "lp-riscv/lp-riscv-inst",
    "lp-riscv/lp-riscv-emu",
    "lp-riscv/lp-riscv-elf",
    "lp-riscv/lp-riscv-emu-guest",
    "lp-riscv/lp-riscv-emu-guest-test-app",
    "lp-shader/lps-builtins-gen-app",
    "lp-shader/lps-builtins-emu-app",
    "lp-shader/lps-filetests-app",
    "lp-app/web-demo",
    "spikes/naga-wasm-poc", "lp-shader/lps-q32",
]
resolver = "2"

# Exclude lps-builtins-emu-app, lps-builtins-wasm, and fw-esp32 from default workspace builds (cross-target only)
# They're still in workspace members so they can use workspace dependencies
# Build them explicitly with: just build-builtins, just build-rv32, or just build-fw-esp32
default-members = [
    # lp-base workspace members
    "lp-base/lp-recovery",
    "lp-base/lpfs",
    # lp-app workspace members
    "lp-core/lpc-engine",
    "lp-core/lpc-view",
    "lp-core/lpc-hardware",
    "lp-core/lpc-shared",
    "lp-app/lpa-server",
    "lp-app/lpa-client",
    "lp-app/lpa-link",
    "lp-app/lpa-studio-core",
    "lp-fw/fw-core",
    "lp-fw/fw-host",
    "lp-fw/fw-checks",
    "lp-fw/fw-tests",
    "lp-cli",
    "lp-core/lpc-model",
    "lp-core/lpc-registry",
    "lp-core/lpc-wire",
    # lps workspace members (excluding lps-builtins-emu-app)
    "lp-shader/lps-builtin-ids",
    "lp-shader/lps-builtins",
    "lp-shader/lps-filetests-gen-app",
    "lp-shader/lps-shared",
    "lp-shader/lp-shader",
    "lp-shader/lps-diagnostics",
    "lp-shader/lpvm",
    "lp-shader/lpvm-wasm",
    "lp-shader/lps-frontend",
    "lp-shader/lps-glsl",
    "lp-shader/lpir",
    "lp-shader/lps-filetests",
    "lp-riscv/lp-riscv-emu-shared",
    "lp-riscv/lp-riscv-inst",
    "lp-riscv/lp-riscv-emu",
    "lp-riscv/lp-riscv-elf",
    "lp-shader/lps-builtins-gen-app",
    "lp-shader/lps-filetests-app",
]
[workspace.package]
version = "40.0.0"
authors = ["The Wasmtime Project Developers"]
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.90.0"

[workspace.lints.rust]
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unused-macro-rules = 'warn'

[workspace.lints.clippy]
all = { level = 'allow', priority = -1 }
clone_on_copy = 'warn'
map_clone = 'warn'
uninlined_format_args = 'warn'
unnecessary_to_owned = 'warn'
manual_strip = 'warn'
useless_conversion = 'warn'
unnecessary_mut_passed = 'warn'
unnecessary_fallible_conversions = 'warn'
unnecessary_cast = 'warn'
allow_attributes_without_reason = 'warn'
from_over_into = 'warn'
redundant_field_names = 'warn'
multiple_bound_locations = 'warn'
extra_unused_type_parameters = 'warn'

[workspace.dependencies]
# Logging dependencies
test-log = "0.2"
env_logger = "0.11"

# Cranelift crates - git main (TestCase fix); uncomment [patch] for local path
cranelift-codegen = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0", default-features = false }
cranelift-frontend = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0", default-features = false }
cranelift-module = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0", default-features = false }
cranelift-jit = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0", default-features = false }
cranelift-native = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0" }
cranelift-object = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0" }
cranelift-reader = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0" }
cranelift-control = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0", default-features = false }
cranelift-interpreter = { git = "https://github.com/light-player/lp-cranelift", branch = "main", version = "0.127.0" }

# regalloc2 - fork (ChunkedVec for OOM mitigation, feature-gating ION allocator)
regalloc2 = { git = "https://github.com/light-player/lp-regalloc2", branch = "lightplayer", default-features = false, features = ["std"] }
lp-collection = { path = "lp-base/lp-collection", default-features = false }
lp-recovery = { path = "lp-base/lp-recovery", default-features = false }

# Common dependencies

# Common dependencies
target-lexicon = "0.13.0"
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
anyhow = { version = "1.0.100", default-features = false }
log = { version = "0.4", default-features = false }
regex = "1.9.1"
glob = "0.3.3"
object = { version = "0.37.3", default-features = false, features = ['read_core', 'elf'] }
critical-section = { version = "1.2.0", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc"] }
schemars = { version = "1.2.1", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.80", default-features = false, features = ["alloc", "raw_value"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[profile.release]
# Link-time optimization for all release builds - saves ~100-300 KB
lto = true
opt-level = "z"
codegen-units = 1
panic = "unwind"

# fw-emu: keep debug info for backtrace symbolication
[profile.release.package.fw-emu]
debug = 1

# ESP32: panic=unwind for OOM recovery via unwinding crate
[profile.release-esp32]
inherits = "release"
panic = "unwind"

[profile.release-esp32.package.fw-esp32]
debug = 1
strip = "none"

[profile.release-esp32.package.esp-radio]
opt-level = "s"

[profile.release-esp32.package.lps-glsl]
opt-level = "s"

[profile.release-esp32.package.esp-phy]
opt-level = "z"

[profile.release-esp32.package.esp-radio-rtos-driver]
opt-level = "z"

[profile.release-esp32.package.esp-wifi-sys-esp32c6]
opt-level = "z"

# Profile for fw-emu: opt-level=3 avoids Cranelift codegen bugs in emulator (InvalidMemoryAccess).
# Used by test_scene_render_fw_emu via ensure_binary_built(..with_profile("release-emu")).
[profile.release-emu]
inherits = "release"
opt-level = 3
codegen-units = 4
# panic = "unwind" inherited from release

[profile.release-emu.package.fw-emu]
debug = 1

# Hot-path builtins are size-sensitive but still execute per pixel.
[profile.release.package.lps-builtins]
opt-level = 3
codegen-units = 4

[patch.crates-io]
esp-storage = { path = "third_party/esp-storage" }
# no_std pp-rs fork for naga `glsl-in` on bare-metal (https://github.com/light-player/pp-rs)
pp-rs = { path = "third_party/pp-rs" }
# no_std JSON serializer patch: preserve serde_json::RawValue as raw JSON.
ser-write-json = { path = "third_party/ser-write-json" }

#####################################
# Local dev patches

# pp-rs local clone (sibling of lp2025): git clone https://github.com/light-player/pp-rs ../pp-rs
#[patch.crates-io]
#pp-rs = { path = "../pp-rs" }

#[patch."https://github.com/light-player/lp-regalloc2"]
#regalloc2 = { path = "../lp-regalloc2" }
#
#[patch."https://github.com/light-player/lp-cranelift"]
#cranelift-codegen = { path = "../lp-cranelift/cranelift/codegen" }
#cranelift-frontend = { path = "../lp-cranelift/cranelift/frontend" }
#cranelift-module = { path = "../lp-cranelift/cranelift/module" }
#cranelift-jit = { path = "../lp-cranelift/cranelift/jit" }
#cranelift-native = { path = "../lp-cranelift/cranelift/native" }
#cranelift-object = { path = "../lp-cranelift/cranelift/object" }
#cranelift-reader = { path = "../lp-cranelift/cranelift/reader" }
#cranelift-control = { path = "../lp-cranelift/cranelift/control" }
#cranelift-interpreter = { path = "../lp-cranelift/cranelift/interpreter" }
#
#[patch."https://github.com/light-player/lp-common"]
#lp-collection = { path = "../lp-common/lp-collection" }
#
