[package]
name = "lp-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
anyhow = "1"
env_logger = { workspace = true }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = { version = "0.21", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
egui = "0.27"
eframe = "0.27"
notify = "6"
lp-model = { path = "../lp-core/lp-model" }
lp-server = { path = "../lp-core/lp-server" }
lp-shared = { path = "../lp-core/lp-shared" }
lp-engine-client = { path = "../lp-core/lp-engine-client" }
lp-client = { path = "../lp-core/lp-client", features = ["ws", "serial"] }
lp-riscv-emu = { path = "../lp-riscv/lp-riscv-emu", features = ["std"] }
lp-riscv-elf = { path = "../lp-riscv/lp-riscv-elf", features = ["std"] }
lp-riscv-inst = { path = "../lp-riscv/lp-riscv-inst" }
serialport = "4.8"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
lp-server = { path = "../lp-core/lp-server" }
lp-shared = { path = "../lp-core/lp-shared" }
lp-model = { path = "../lp-core/lp-model" }
serde_json = "1"

[features]
default = ["serial"]
serial = []

[lints]
workspace = true
