[package]
name = "lp-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
anyhow = "1"
env_logger = { workspace = true }
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
toml = { version = "0.9", default-features = false, features = ["parse", "serde", "display"] }
tungstenite = { version = "0.21", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
egui = "0.30"
eframe = "0.30"
notify = "6"
lpc-model = { path = "../lp-core/lpc-model" }
lpc-wire = { path = "../lp-core/lpc-wire" }
lpc-source = { path = "../lp-core/lpc-source", default-features = false }
lpa-server = { path = "../lp-app/lpa-server" }
lpc-shared = { path = "../lp-core/lpc-shared" }
lpfs = { path = "../lp-base/lpfs", features = ["std"] }
lpc-view = { path = "../lp-core/lpc-view" }
lpa-client = { path = "../lp-app/lpa-client", features = ["ws", "serial", "emu"] }
lp-riscv-emu = { path = "../lp-riscv/lp-riscv-emu", features = ["std"] }
lp-perf = { path = "../lp-base/lp-perf", default-features = false }
lp-riscv-elf = { path = "../lp-riscv/lp-riscv-elf", features = ["std"] }
lp-riscv-inst = { path = "../lp-riscv/lp-riscv-inst" }
serialport = "4.8"
dialoguer = "0.11"
chrono = "0.4"
lpir = { path = "../lp-shader/lpir" }
lps-frontend = { path = "../lp-shader/lps-frontend" }
lps-shared = { path = "../lp-shader/lps-shared" }
lp-shader = { path = "../lp-shader/lp-shader" }
# `debug` enables interleaved alloc rendering for `shader-debug` and related tooling.
lpvm-native = { path = "../lp-shader/lpvm-native", features = ["debug"] }
lpvm-cranelift = { path = "../lp-shader/lpvm-cranelift", features = ["riscv32-object"] }
unicode-width = "0.2"
rustc-demangle = "0.1"

[dev-dependencies]
tempfile = "3"
lpa-server = { path = "../lp-app/lpa-server" }
lpc-shared = { path = "../lp-core/lpc-shared" }
lpfs = { path = "../lp-base/lpfs", features = ["std"] }
lpc-model = { path = "../lp-core/lpc-model" }
lpc-wire = { path = "../lp-core/lpc-wire" }
serde_json = "1"

[features]
default = ["serial"]
serial = []

[lints]
workspace = true
