[package]
name = "lp-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lp-collection = { workspace = true, features = ["serde"] }
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
anyhow = "1"
env_logger = { workspace = true }
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tungstenite = { version = "0.21", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
egui = "0.30"
eframe = "0.30"
notify = "6"
# lp-cli is host-only tooling that nothing in the firmware graphs depends on,
# so the (non-default) schema-gen features are safe to enable unconditionally.
lpc-model = { path = "../lp-core/lpc-model", features = ["schema-gen"] }
lpc-wire = { path = "../lp-core/lpc-wire" }
lpa-server = { path = "../lp-app/lpa-server" }
lp-gfx-lpvm = { path = "../lp-gfx/lp-gfx-lpvm" }
lpa-link = { path = "../lp-app/lpa-link", features = ["host-process", "host-serial-esp32"] }
lpc-hardware = { path = "../lp-core/lpc-hardware", features = ["schema-gen"] }
schemars = { workspace = true }
lpc-shared = { path = "../lp-core/lpc-shared" }
lpfs = { path = "../lp-base/lpfs", features = ["std"] }
lpc-view = { path = "../lp-core/lpc-view" }
lpa-client = { path = "../lp-app/lpa-client", features = ["ws", "serial", "emu"] }
lp-riscv-emu = { path = "../lp-riscv/lp-riscv-emu", features = ["std"] }
lp-perf = { path = "../lp-base/lp-perf", default-features = false }
lp-riscv-elf = { path = "../lp-riscv/lp-riscv-elf", features = ["std"] }
lp-riscv-inst = { path = "../lp-riscv/lp-riscv-inst" }
serialport = "4.8"
# fwcheck flashes locally built check ELFs in-process (M5: no espflash
# subprocess). Library-only: the `cli` feature and its dep tree stay out.
espflash = { version = "3.3", default-features = false, features = [
    "serialport",
] }
dialoguer = "0.11"
chrono = "0.4"
fw-checks = { path = "../lp-fw/fw-checks", features = ["std", "check-shader-compile"] }
lpir = { path = "../lp-shader/lpir" }
lps-frontend = { path = "../lp-shader/lps-frontend" }
lps-shared = { path = "../lp-shader/lps-shared" }
lp-shader = { path = "../lp-shader/lp-shader" }
# `debug` enables interleaved alloc rendering for `shader-debug` and related tooling.
lpvm-native = { path = "../lp-shader/lpvm-native", features = ["debug"] }
lpvm-cranelift = { path = "../lp-shader/lpvm-cranelift", features = ["riscv32-object"] }
unicode-width = "0.2"
rustc-demangle = "0.1"
pollster = "0.3"

[dev-dependencies]
tempfile = "3"
# Corpus conformance test (tests/schema_conformance.rs); same pinning as
# lpc-model's schema_gen dev-dep.
jsonschema = { version = "0.46", default-features = false }
lpc-engine = { path = "../lp-core/lpc-engine" }
lpa-server = { path = "../lp-app/lpa-server" }
lpc-hardware = { path = "../lp-core/lpc-hardware" }
lpc-shared = { path = "../lp-core/lpc-shared" }
lpfs = { path = "../lp-base/lpfs", features = ["std"] }
lpc-model = { path = "../lp-core/lpc-model" }
lpc-wire = { path = "../lp-core/lpc-wire" }
serde_json = "1"

[features]
default = ["serial"]
serial = []

[lints]
workspace = true
