[package]
name = "lp-studio-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "LightPlayer Studio effect executor and runtime adapters"

[dependencies]
lp-studio-core = { path = "../lp-studio-core" }
lpa-client = { path = "../lpa-client", default-features = false }
lpa-link = { path = "../lpa-link" }
lpc-model = { path = "../../lp-core/lpc-model" }
lpc-wire = { path = "../../lp-core/lpc-wire" }
async-trait = { version = "0.1", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { version = "1", features = ["sync", "time"], optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "ErrorEvent",
    "MessageEvent",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }

[features]
default = []
host-process = ["lpa-client/host", "lpa-link/host-process", "dep:tokio"]
browser-worker = [
    "lpa-link/browser-worker",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
browser-serial-esp32 = [
    "lpa-link/browser-serial-esp32",
    "dep:async-trait",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]

[lints]
workspace = true
