[package]
name = "lp-studio-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Static Dioxus web shell for LightPlayer Studio"

[features]
stories = ["dep:lpc-model", "dep:lpc-wire", "dep:web-sys"]

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
lpa-link = { path = "../lpa-link" }
lpc-model = { path = "../../lp-core/lpc-model", optional = true }
lpc-wire = { path = "../../lp-core/lpc-wire", optional = true }
lp-studio-core = { path = "../lp-studio-core" }
lp-studio-runtime = { path = "../lp-studio-runtime", features = ["browser-worker", "browser-serial-esp32"] }
web-sys = { version = "0.3", optional = true, features = ["Location", "Window"] }

[lints]
workspace = true
