[package]
name = "lpa-fs-opfs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Local project store for the browser: OPFS-backed, memory-primary LpFs with async write-behind"

[dependencies]
lpfs = { path = "../../lp-base/lpfs" }
log = { workspace = true, default-features = false }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "File",
    "FileSystemCreateWritableOptions",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemHandle",
    "FileSystemHandleKind",
    "FileSystemRemoveOptions",
    "FileSystemWritableFileStream",
    "Navigator",
    "StorageManager",
    "Window",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "WritableStream",
]

[dev-dependencies]
lpc-history = { path = "../../lp-core/lpc-history" }
wasm-bindgen-test = "0.3"

[lints]
workspace = true
